Excersise 1. Add h1, p and image tags

--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-    
+    <h1>Заголовок задания 1</h1>
+    <p>Параграф задания 1</p>
+    <img src="/img/img1.png" alt="Абсолютный путь">
+    <img src="./../../img/img2.png" alt="Относительный путь">
 </body>
 
 </html>
