--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Заголовок задания 1</h1>
     <p>Параграф задания 1</p>
-    <img src="/img/img1.png" alt="Абсолютный путь">
+    <img src="/html-css/img/img1.png" alt="Абсолютный путь">
     <img src="./../../img/img2.png" alt="Относительный путь">
 </body>
 
